--- a/src/Core/BootSectorUI.fxml
+++ b/src/Core/BootSectorUI.fxml
@@ -4,18 +4,25 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="418.0" prefWidth="364.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Core.BootSectorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="418.0" prefWidth="422.0" xmlns="http://javafx.com/javafx/null" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Core.BootSectorController">
    <children>
-      <Label layoutX="140.0" layoutY="20.0" text="BPB_BytsPerSec" />
-      <TextField fx:id="bytesPerSecField" layoutX="107.0" layoutY="52.0" />
-      <Label layoutX="140.0" layoutY="95.0" text="BPB_SecPerClus" />
-      <TextField fx:id="secPerClusField" layoutX="108.0" layoutY="130.0" />
-      <Label layoutX="151.0" layoutY="173.0" text="BPB_TotSec" />
-      <TextField fx:id="totalSecField" layoutX="108.0" layoutY="208.0" />
-      <Label layoutX="146.0" layoutY="254.0" text="BS_FilSysType" />
-      <TextField fx:id="filSysTypeField" layoutX="108.0" layoutY="287.0" />
-      <Label layoutX="151.0" layoutY="330.0" text="BPB_FATSz8" />
-      <TextField fx:id="fatsizeField" layoutX="109.0" layoutY="361.0" />
+      <Label layoutX="63.0" layoutY="26.0" text="BPB_BytsPerSec" />
+      <TextField fx:id="bytesPerSecField" layoutX="30.0" layoutY="58.0" />
+      <Label layoutX="63.0" layoutY="101.0" text="BPB_SecPerClus" />
+      <TextField fx:id="secPerClusField" layoutX="31.0" layoutY="136.0" />
+      <Label layoutX="74.0" layoutY="179.0" text="BPB_TotSec" />
+      <TextField fx:id="totalSecField" layoutX="31.0" layoutY="214.0" />
+      <Label layoutX="69.0" layoutY="260.0" text="BS_FilSysType" />
+      <TextField fx:id="filSysTypeField" layoutX="31.0" layoutY="293.0" />
+      <Label layoutX="74.0" layoutY="336.0" text="BPB_FATSz8" />
+      <TextField fx:id="fatsizeField" layoutX="32.0" layoutY="367.0" />
+      <Label layoutX="281.0" layoutY="26.0" text="BPB_DirecSz8" />
+      <TextField fx:id="DirectorySzField" layoutX="243.0" layoutY="58.0" />
+      <Label layoutX="282.0" layoutY="101.0" text="BPB_FreeClus" />
+      <TextField fx:id="freeClusterField" layoutX="243.0" layoutY="136.0" />
+      <Label layoutX="281.0" layoutY="179.0" text="BPB_TaknClus" />
+      <TextField fx:id="taknClusField" layoutX="243.0" layoutY="214.0" />
+      <Label layoutX="285.0" layoutY="260.0" text="BPB_TotClus" />
+      <TextField fx:id="totalClusField" layoutX="243.0" layoutY="293.0" />
    </children>
 </AnchorPane>
